fix svg image display issue on small screen

--- a/src/components/article/ArticleContent.module.scss
+++ b/src/components/article/ArticleContent.module.scss
@@ -222,6 +222,11 @@
       margin-bottom: 0;
     }
   }
+
+  img[src*='.svg'] {
+    margin: $gutter 0;
+    max-width: 100%;
+  }
 }
 
 .meta {
